fixing navigation bar overlap

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -26,7 +26,7 @@ header {
           font-size: .8em;
 
           &:hover {
-            background: rgb(192, 174, 212);
+            background: #bbedf8;
           }
         }
       }
