--- a/src/styles.scss
+++ b/src/styles.scss
@@ -664,10 +664,6 @@ a:hover {
   overflow-x: auto;
 }
 
-.link_table:visited {
-  color:palevioletred;
-}
-
 .container1 {
   margin-top: 90px;
   margin-left: 7rem;
@@ -681,20 +677,11 @@ a:hover {
   color: #888;
 }
 
-.bg-light {
-  // background-color: #d9e4e6!important;
-  // background-color: #f5d176!important;
-  // background-color: #DAF7A6!important;
-  // background-color: #ffd8c7!important;
-}
-
-.navbar {
-  // border-bottom-left-radius: 15px 15px;
-  // border-bottom-right-radius: 20px 20px;
-  // border-radius: 0px 0px 15px 15px;
-}
-
 .sectiona {
-  margin-top:1.5rem;
-  min-height: 74vh;
+  margin-top:5em;
+  min-height: 76vh;
+}
+
+.mt-button{
+  margin-top: 2rem!important;
 }
